# archerdfu.profile

./: main.py  pyproject.toml
archerdfu/profile/typedefs/: profile.py
assets/: profiles.dfu
tests/: test_profile.py
